--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,1 @@
-<h1>Список наших парикмахеров</h1>
-
-<% @barbers.each do |barber| %>
-	<p>
-		<a href="/barber/<%= barber.id %>"><%= barber.name %></a> 
-	</p>
-<% end %>
+<h1>Main page</h1>
