--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,7 +20,7 @@
     	<!-- Include all compiled plugins (below), or include individual files as needed -->
     	<!-- <script src="/vendor/bootstrap/js/bootstrap.min.js"></script> -->
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    	<script src="script.js"></script>
+    	<script src="/script.js"></script>
 	</head>
 	<body>
 		<div class="container">
