--- a/views/index.erb
+++ b/views/index.erb
@@ -25,7 +25,7 @@
 		</div>
     	<div class="container-md themed-container product"><%= tea.description %></div>
     	<div class="container-md themed-container product"><%= tea.price %> руб.</div>
-    	<button type="button" class="btn btn-success" onclick="add_to_cart()">В корзину</button>
+    	<button type="button" class="btn btn-success" onclick="add_to_cart(<%= tea.id %>)">В корзину</button>
     </div>
 	
 	<% end %>
