add a simple form

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -54,6 +54,14 @@
 			      </li> -->
 			    </ul>
 			  </div>
+
+			    <ul class="nav justify-content-end">
+				  <li class="nav-item">
+				  	<form action="/cart" method="POST">
+				    <input type="submit" name="cart" class="btn btn-success" value="Cart(...)">
+				    </form>
+				  </li>
+				</ul>
 			</nav>
 
 			<div>
