function cart_get_orders

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -58,7 +58,7 @@
 			    <ul class="nav justify-content-end">
 				  <li class="nav-item">
 				  	<form action="/cart" method="POST">
-				    <input type="submit" name="cart" class="btn btn-success" value="Cart(...)">
+				    	<input type="submit" name="cart" class="btn btn-success" value="Cart(...)">
 				    </form>
 				  </li>
 				</ul>
@@ -100,6 +100,21 @@
 		  return cnt;
 		}
 
+		function cart_get_orders() {
+			var orders = '';
+
+			for (var i = 0; i < window.localStorage.length; i++) 
+			{
+				var key = window.localStorage.key(i);
+				var value = window.localStorage.getItem(key);
+
+				if (key.indexOf('product_') == 0) {
+					orders = orders + key + ' = ' + value + ', ';
+				}
+			}
+			return orders;
+		}
+		
 	</script>
 
   </body>
