--- a/views/layout.erb
+++ b/views/layout.erb
@@ -58,6 +58,7 @@
 			    <ul class="nav justify-content-end">
 				  <li class="nav-item">
 				  	<form action="/cart" method="POST">
+				  		<input id="orders_input" type="hidden" name="orders">
 				    	<input type="submit" name="cart" class="btn btn-success" value="Cart(...)">
 				    </form>
 				  </li>
@@ -74,12 +75,15 @@
 	</div>
 
 	<script type="text/javascript">
+
 		function add_to_cart(id) {
 			key = 'product_' + id;
 
 			var x = window.localStorage.getItem(key);
 			x = x * 1 + 1;
 			window.localStorage.setItem(key, x);
+
+			update_orders();
 		}
 
 		function cart_get_number_of_items()
@@ -114,7 +118,12 @@
 			}
 			return orders;
 		}
-		
+
+		function update_orders() {
+			var orders = cart_get_orders();
+			$('#orders_input').val(orders);
+		}
+
 	</script>
 
   </body>
